--- a/Mission Reports.html
+++ b/Mission Reports.html
@@ -92,6 +92,12 @@
   <a href="mission-reports/Theres-Goblins-in-My-Turnips-Report.html" class="report-link">📜 Read Full Report</a>
 </div>
 
+<div class="mission-report">
+  <h2>The Affliction of the Redwater</h2>
+  <p>A corrupted river, suspicious stones, and a sorrowful siren. The team braved crimson slimes, musical mind control, and a slightly overenthusiastic scroll-reader to cleanse Redwater Lake. Features mysterious rituals, dangerous goo, and a scenic lake battle with extra squelch.</p>
+  <a href="mission-reports/The-Affliction-of-the-Redwater-Report.html" class="report-link" style="color: white;">📜 Read Full Report</a>
+</div>
+
 <!-- Future Mission Reports Placeholder -->
 <div class="mission-report">
   <h2>New Reports Coming Soon...</h2>
