--- a/mission-reports/The-Affliction-of-the-Redwater-Report.html
+++ b/mission-reports/The-Affliction-of-the-Redwater-Report.html
@@ -28,14 +28,14 @@
 
   <p>They continued their investigation along the riverbank and were suddenly beset by three giant crimson mosquitoes, bloated and buzzing with corrupted energy. These were swiftly dealt with.</p>
 
-<p>At last returning to the lake for a full examination, Styx and ElderDan attempted a quiet approach to get a better look at the strange bubbling shoreline and unusual structures beneath the water. Unfortunately, despite being aware of the presence of two slimes and an ooze, the moment didn't quite land — and the pair wandered in for a closer inspection like it was a picnic, not a potential ambush.</p>
+<p>At last returning to the lake for a full examination, Styx and ElderDan attempted a quiet approach to get a better look at the strange bubbling stone alter. Unfortunately, despite being aware of the presence of two slimes and an ooze, the moment didn't quite land — and the pair wandered in for a closer inspection like it was a picnic, not a potential ambush.</p>
 
-<p>The lake exploded into action. Slimes slithered, oozes gurgled, and the rest of the team (hearing the chaos from downshore) raced to join the fray. The battle was sticky, acidic, and altogether very squelchy. ElderDan’s robes will probably never smell the same. But the team prevailed, leaving behind sizzling puddles of what was once a gelatinous welcome committee.</p>
+<p>The area exploded into action. Slimes slithered, oozes gurgled, and the rest of the team (hearing the chaos from downshore) raced to join the fray. The battle was sticky, acidic, and altogether very squelchy. ElderDan’s robes will probably never smell the same. But the team prevailed, leaving behind sizzling puddles of what was once a gelatinous welcome committee.</p>
 
 <p>Following the fight, the group turned their attention to a half-submerged altar. It featured five smooth indentations — four already filled with strange stones. The final indentation pulsed faintly. Recognizing the swirling runes from Elara’s cottage, the group carefully placed the last stone and and re-organised the others, with a satisfying hum and a shimmer of arcane light, deactivated the altar’s magic.</p>
 
 
-  <p>What followed was unexpected: a sorrowful Siren emerged from the mist — a being of water, magic, and melancholy. Rather than fight, the team listened. They helped clear the area of corruption and debris, and the Siren, in return, spoke of dark-robed figures who had twisted the river’s magic, seeking to awaken something ancient and terrible. The stones were ritual keys. The altar a conduit. And the danger? Not over.</p>
+  <p>What followed was unexpected: a sorrowful Siren emerged from the mist over the lake — a being of water, magic, and melancholy. Rather than fight, the team listened. They helped clear the area of corruption and debris, and the Siren, in return, spoke of dark-robed figures who had twisted the river’s magic, seeking to awaken something ancient and terrible. The stones were ritual keys. The altar a conduit. And the danger? Not over.</p>
 
   <p>The group returned with multiple samples and trinkets for Guild analysis. The strange energies matched prior traces found in goblin sigils — further tying these disturbances together.</p>
 
