--- a/Mission Reports.html
+++ b/Mission Reports.html
@@ -97,6 +97,11 @@
   <p>A corrupted river, suspicious stones, and a sorrowful siren. The team braved crimson slimes, musical mind control, and a slightly overenthusiastic scroll-reader to cleanse Redwater Lake. Features mysterious rituals, dangerous goo, and a scenic lake battle with extra squelch.</p>
   <a href="mission-reports/The-Affliction-of-the-Redwater-Report.html" class="report-link" style="color: white;">📜 Read Full Report</a>
 </div>
+<div class="mission-report">
+  <h2>Emberdeep Catacombs</h2>
+  <p>A quake reveals a forgotten crypt beneath a dwarven tavern. The party descended into alchemical horrors, restless spirits, and whispering halls. Highlights include rat diplomacy gone wrong, skeletal pranks, constellation puzzles, and a soul-transfer ritual involving a bat familiar and a shattered locket. Echo Gem status: defiled.</p>
+  <a href="mission-reports/Emberdeep-Catacombs-Report.html" class="report-link" style="color: white;">📜 Read Full Report</a>
+</div>
 
 <!-- Future Mission Reports Placeholder -->
 <div class="mission-report">
