--- a/Mercenary Guild Overview.html
+++ b/Mercenary Guild Overview.html
@@ -1,188 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>The Iron Meridian - Guild Overview</title>
-  <style>
-    body { font-family: Arial, sans-serif; background: #1f1f1f; color: #f4f4f4; padding: 2rem; }
-    h1, h2, h3 { color: #ffd700; }
-    .section { margin-bottom: 2rem; }
-    table { width: 100%; border-collapse: collapse; margin-top: 1rem; }
-    th, td { border: 1px solid #444; padding: 0.75rem; text-align: left; }
-    th { background-color: #333; color: #ffd700; }
-    .note { color: #ccc; font-style: italic; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<title>The Iron Meridian – Guild Overview</title>
+
+<style>
+  :root{
+    --bg-dark:#1c1c1c;
+    --bg-card:#2a2a2a;
+    --text:#f5f5f5;
+    --accent:#ffc107;
+    --accent-light:#ffd966;
+    --radius:8px;
+  }
+
+  /* ---------- base ---------- */
+  *{box-sizing:border-box;margin:0;padding:0;}
+  body{
+    font-family:"Segoe UI",Tahoma,Verdana,sans-serif;
+    background:var(--bg-dark);color:var(--text);
+    padding:16px;                /* phone default */
+    line-height:1.65;
+  }
+  main{max-width:950px;margin:auto;}
+
+  /* ========== NAVIGATION (re-usable) ========== */
+  .site-header{
+    display:flex;align-items:center;gap:.75rem;
+    background:#1f1f1f;border-bottom:2px solid #444;
+    margin:-16px -16px 1.8rem;
+    padding:.75rem 1rem;position:relative;
+  }
+  .logo{
+    font-weight:700;color:var(--accent);
+    font-size:1.1rem;white-space:nowrap;
+  }
+  /* hamburger icon */
+  .nav-toggle{display:none;}            /* hidden checkbox */
+  .hamburger{
+    font-size:1.4rem;color:#fff;cursor:pointer;
+    margin-left:auto;user-select:none;
+    display:block;
+  }
+  /* nav links */
+  .site-nav{
+    display:none;flex-direction:column;gap:.75rem;
+    position:absolute;left:0;right:0;top:100%;
+    background:#1f1f1f;border-top:2px solid #444;
+    padding:1rem;
+  }
+  .site-nav a{
+    color:#fff;text-decoration:none;font-weight:600;white-space:nowrap;
+  }
+  .site-nav a:hover{color:var(--accent);}
+  /* toggle behaviour */
+  .nav-toggle:checked + .hamburger + .site-nav{display:flex;}
+
+  /* desktop layout */
+  @media(min-width:620px){
+    body{padding:24px;}
+    .site-header{margin:-24px -24px 2rem;padding:1rem 1.25rem;}
+    .hamburger{display:none;}
+    .site-nav{
+      display:flex !important;position:static;
+      flex-direction:row;gap:1.25rem;margin-left:auto;
+      background:transparent;border:none;
+    }
+  }
+
+  /* ---------- headings & text ---------- */
+  h1{
+    text-align:center;color:var(--accent);
+    font-size:clamp(1.6rem,5vw,2.4rem);
+    margin-bottom:.75em;
+  }
+  h2{
+    color:var(--accent-light);
+    font-size:clamp(1.25rem,4.5vw,1.6rem);
+    margin:.6em 0 .4em;
+  }
+  h3{
+    color:var(--accent-light);
+    font-size:clamp(1.1rem,4vw,1.35rem);
+    margin:.5em 0 .3em;
+  }
+  p{margin-bottom:1em;}
+  ul{padding-left:1.2em;margin-bottom:1em;}
+  li{margin-bottom:.4em;}
+  .note{color:#ccc;font-style:italic;}
+
+  /* ---------- responsive tables ---------- */
+  .table-wrap{
+    overflow-x:auto;-webkit-overflow-scrolling:touch;margin-top:.75rem;
+  }
+  table{
+    width:100%;min-width:550px;border-collapse:collapse;
+    margin-bottom:1.5rem;font-size:.95rem;
+  }
+  th,td{border:1px solid #444;padding:.65rem;text-align:left;}
+  th{background:#333;color:var(--accent-light);}
+  td:first-child{font-weight:bold;}
+
+  /* ---------- section box ---------- */
+  .section{
+    background:var(--bg-card);border-left:5px solid var(--accent);
+    border-radius:var(--radius);padding:1.25rem;margin-bottom:1.8rem;
+  }
+  @media(min-width:680px){.section{padding:1.5rem;}}
+</style>
 </head>
+
 <body>
-<!-- Navigation Bar -->
-<nav style="background-color: #1f1f1f; padding: 1em; border-bottom: 2px solid #444;">
-  <ul style="display: flex; justify-content: center; list-style: none; margin: 0; padding: 0;">
-    <li style="margin: 0 1em;">
-      <a href="Mercenary Guild Overview.html" style="color: #fff; text-decoration: none; font-weight: bold;">🏰 Guild Overview</a>
-    </li>
-    <li style="margin: 0 1em;">
-      <a href="Mission Board.html" style="color: #fff; text-decoration: none; font-weight: bold;">📜 Mission Board</a>
-    </li>
-    <li style="margin: 0 1em;">
-      <a href="The Armoury.html" style="color: #fff; text-decoration: none; font-weight: bold;">🛡️ The Armoury</a>
-    </li>
-	<li style="margin: 0 1em;">
-      <a href="Mission Reports.html" style="color: #fff; text-decoration: none; font-weight: bold;">📝 Mission Reports</a>
-    </li>
-    <li style="margin: 0 1em;">
-      <a href="The Iron Reserve.html" style="color: #fff; text-decoration: none; font-weight: bold;">🏺 The Iron Reserve</a>
-    </li>
-</ul>
-</nav>
-  <h1>The Iron Meridian - Guild Overview</h1>
+<!-- --------- HEADER & NAV --------- -->
+<header class="site-header">
+  <div class="logo">Iron Meridian</div>
 
-<div class="section">
-  <h2>✨ World Background Summary</h2>
-  <p><strong>Current Year:</strong> 2050 AD (After Divide)</p>
-  <p>
-    About 4000 years ago, a dying god decided to pull the world apart like poorly baked bread.
-    That event — now just called “The Divide” — kicked off millennia of monsters, magical fallout, 
-    and the general collapse of polite society.
-  </p>
-  <p>
-    Since then, the world’s been through *a lot*: undead empires, dragon kings with ego problems, 
-    and most recently, a charming little apocalypse called <em>The Harrowing</em>, which left glowing rift portals 
-    scattered like confetti (except, you know, screaming and demonic).
-  </p>
-  <p>
-    The old powers have faded or vanished. Kingdoms are dust. Heroes are few. But mercenaries? 
-    Oh, we've got mercenaries. That’s where you come in.
-  </p>
-  <p>
-    Your guild — <strong>The Iron Meridian</strong> — is one of the few standing between this broken world and 
-    complete demon buffet. Based out of an old fortress with new plumbing, you take contracts, 
-    fight monsters, and occasionally argue about who gets the magic boots.
-  </p>
-</div>
+  <input type="checkbox" id="nav-toggle" class="nav-toggle">
+  <label for="nav-toggle" class="hamburger">&#9776;</label>
 
+  <nav class="site-nav">
+    <a href="Mercenary Guild Overview.html">🏰 Overview</a>
+    <a href="Mission Board.html">📜 Mission Board</a>
+    <a href="Mission Reports.html">📝 Reports</a>
+    <a href="The Armoury.html">🛡️ The Armoury</a>
+    <a href="iron-meridian-downtime.html">⏳ Downtime</a>
+    <a href="The Iron Reserve.html">🏺 Reserve</a>
+  </nav>
+</header>
 
-<div class="section">
-  <h2>🏰 The Iron Meridian – Structure & Rules</h2>
+<!-- --------- PAGE CONTENT --------- -->
+<main>
+  <h1>The Iron Meridian – Guild Overview</h1>
 
-  <p><strong>Location:</strong><br>
-  A sturdy keep perched on old bones — pre-Divide ruins, demon-scarred lands, and cheap rent. What could go wrong?</p>
+  <!-- ========= Background ================================================= -->
+  <section class="section">
+    <h2>✨ World Background Summary</h2>
+    <p><strong>Current Year:</strong> 2050 AD (After Divide)</p>
+    <p>A dying god tore the world apart 4 000 years ago in <em>The Divide</em>.  
+       Since then: undead empires, dragon kings, and the mini-apocalypse <em>The Harrowing</em>, which left glowing demon rifts everywhere.</p>
+    <p>Old powers are dust; heroes are scarce; mercenaries thrive. Enter <strong>The Iron Meridian</strong>, the fort-dwelling guild that punches nightmares, takes contracts, and sometimes argues over magic boots.</p>
+  </section>
 
-  <p><strong>Mission Access:</strong><br>
-  We’ll recommend a rank. That won’t stop a troll from turning you into a hat. Consider it advice, not armour.</p>
+  <!-- ========= Structure & Rules ========================================== -->
+  <section class="section">
+    <h2>🏰 Structure &amp; Rules</h2>
+    <p><strong>Base:</strong> Ancient keep on demon-scarred land. Cheap rent, great ambience, constant risk.</p>
+    <p><strong>Mission Access:</strong> Recommended ranks exist. Trolls can’t read recommendations.</p>
+    <p><strong>Loot:</strong> Offer finds to the Armoury for appraisal ➜ gold. Honest rates (mostly).</p>
+    <p><strong>Training:</strong> Missed a mission? Away-training ensures you return wiser and only <em>slightly</em> rusty.</p>
+    <p><strong>Guild Flow:</strong> Members rotate — some off on side quests, others home mending wounds. Pretend they never left… unless they bring snacks.</p>
+  </section>
 
-  <p><strong>Loot:</strong><br>
-  “From spoils to stockpiles!” All loot can be offered to the Guild Armoury for appraisal — in return for gold. Honest rates, mostly. (Don’t ask about the ‘missing’ Wand of Fireballs.)</p>
-
-  <p><strong>Training:</strong><br>
-  Those who train, maintain. Miss a mission? No problem — the Away Training program ensures you come back older, wiser, and only <em>slightly</em> rusty.</p>
-
-  <p><strong>Guild Flow:</strong><br>
-  Due to the unpredictable nature of questing, the Iron Meridian operates a ‘rotational adventuring model.’ That’s code for: sometimes folks are off fighting things you haven’t even heard of yet. Welcome them back like they never left (and maybe ask if they brought snacks)..</p>
-</div>
-
-<h3>🌟 Rank Structure</h3>
-<table>
-  <tr><th>Rank</th><th>Level Range</th><th>Privileges</th></tr>
-  <tr>
-    <td>Bronze</td>
-    <td>1–3</td>
-    <td>
-      Welcome to the grind. Expect goblins, rats, and "character building" jobs.
-      Payouts are modest, but hey — the tavern has a discount stew night.
-    </td>
-  </tr>
-  <tr>
-    <td>Silver</td>
-    <td>4–7</td>
-    <td>
-      You're starting to shine. Bigger missions, better gear, and the occasional 
-      "oops-that-was-a-dragon" moment. Also includes a semi-official badge.
-    </td>
-  </tr>
-  <tr>
-    <td>Gold</td>
-    <td>8–12</td>
-    <td>
-      Now we're talking. Elite contracts, rare loot drops, and probably a 
-      moral dilemma or two. People might even start calling you “hero” unironically.
-    </td>
-  </tr>
-  <tr>
-    <td>Platinum</td>
-    <td>13+</td>
-    <td>
-      You're on the poster. These missions could shift the fate of continents 
-      (or at least cities). Top-tier pay, special privileges, and enemies with monologues.
-    </td>
-  </tr>
-</table>
-
+  <!-- ========= Rank Structure ============================================ -->
+  <h3>🌟 Rank Structure</h3>
+  <div class="table-wrap">
+    <table>
+      <thead><tr><th>Rank</th><th>Level Range</th><th>Privileges</th></tr></thead>
+      <tbody>
+        <tr><td>Bronze</td><td>1–3</td><td>Rats, goblins, “character building” jobs. Tavern-stew discount.</td></tr>
+        <tr><td>Silver</td><td>4–7</td><td>Bigger quests, better gear, semi-official badge, possible dragon.</td></tr>
+        <tr><td>Gold</td><td>8–12</td><td>Elite contracts, rare loot, moral dilemmas. People may say “hero.”</td></tr>
+        <tr><td>Platinum</td><td>13+</td><td>Poster material. Missions change continents. Enemies with monologues.</td></tr>
+      </tbody>
+    </table>
   </div>
 
-  <div class="section">
-    <h2>🥇 Guild Rewards & Away Progression</h2>
-<ul>
-  <li><strong>XP:</strong> Join a mission, earn your share of glory and XP. Away for a session? No problem. You’ll receive the average XP from active runs—whether you were off training, undercover, or on a suspiciously long lunch break, we don’t ask.</li>
-  <li><strong>Merits:</strong> Earned for going above and beyond—like saving the day or just not blowing up the healer. Trade them in for perks, upgrades, and bragging rights in the mess hall.</li>
-</ul>
+  <!-- ========= Rewards ==================================================== -->
+  <section class="section">
+    <h2>🥇 Guild Rewards &amp; Away Progression</h2>
+    <ul>
+      <li><strong>XP:</strong> Active players earn XP; absent players receive the average — whether training, undercover, or on an epic lunch break.</li>
+      <li><strong>Merits:</strong> Awarded for heroics (or not exploding the healer). Spend on perks and upgrades.</li>
+    </ul>
 
     <h3>🏦 Guild Armoury</h3>
-<ul>
-  <li>Loot turned in to the Armoury gets appraised and exchanged for gold at a generous 1:1 rate—no haggling, no headaches, just honest coin for your goblin-stained sword.</li>
-  <li>Need gear but low on coin? Rent it for the session at just 20% of the market price. But remember: if you break it, you *definitely* bought it.</li>
-  <li>Gear rotates between missions—our NPC mercs have sticky fingers and wanderlust. Don’t get too attached to that +1 spear; it might be stabbing a demon in another district next week.</li>
-  <li>Some items vanish permanently from the Armoury (and no, we don’t want to talk about where that flaming crossbow went). If it's gone, it’s gone.</li>
-</ul>
-  </div>
-
-  <div class="section">
-    <h2>🌎 Factions</h2>
-<table>
-  <tr><th>Faction</th><th>Type</th><th>Attitude to Guild</th><th>Notes</th></tr>
-  <tr>
-    <td>Pale Paladins</td>
-    <td>Military/Religious</td>
-    <td>Cautiously Allied</td>
-    <td>Big fans of order, honor, and scowling. Will bless your sword *and* judge your lifestyle.</td>
-  </tr>
-  <tr>
-    <td>Radiant Crusaders</td>
-    <td>Adventurer Guild</td>
-    <td>Friendly Competitors</td>
-    <td>Flashy, loud, and usually on fire—in the heroic way. Expect rivalry with a handshake (and maybe fireworks).</td>
-  </tr>
-  <tr>
-    <td>Dismal Blades</td>
-    <td>Criminal</td>
-    <td>Neutral to Hostile</td>
-    <td>Will stab you in the back… but might pay well first. Shady jobs, shady folks.</td>
-  </tr>
-  <tr>
-    <td>Ivory Labyrinth Templars</td>
-    <td>Cult</td>
-    <td>Hostile</td>
-    <td>Terrible party guests. Speak in riddles, summon things with too many eyes, and never tip.</td>
-  </tr>
-  <tr>
-    <td>Demonic Forces</td>
-    <td>Enemies</td>
-    <td>Kill on Sight</td>
-    <td>They’re why we can’t have nice things. Expect fire, portals, and unreasonable roaring.</td>
-  </tr>
-</table>
-  </div>
-
-  <div class="section">
-    <h2>🏛️ Modular Mission Structure</h2>
-    <p>Each game session can focus on a mission from:</p>
     <ul>
-      <li>External contracts (towns, nobles, trade routes)</li>
-      <li>Internal guild needs (demon incursions, training drills)</li>
-      <li>Faction intrigue (covert tasks, diplomacy)</li>
+      <li>Turn in loot ➜ 1 : 1 gold. No haggling.</li>
+      <li>Short on coin? Rent an item for a session at 20 % of market price — break it, buy it.</li>
+      <li>Stock rotates; some gear vanishes forever. Don’t get too attached to that flaming crossbow.</li>
     </ul>
-    <p class="note">Missions vary in length and challenge — pick what fits the time and group mood.</p>
+  </section>
+
+  <!-- ========= Factions =================================================== -->
+  <h3>🌎 Factions</h3>
+  <div class="table-wrap">
+    <table>
+      <thead><tr><th>Faction</th><th>Type</th><th>Attitude</th><th>Notes</th></tr></thead>
+      <tbody>
+        <tr><td>Pale Paladins</td><td>Military / Religious</td><td>Cautiously Allied</td><td>Bless your sword &amp; judge your lifestyle.</td></tr>
+        <tr><td>Radiant Crusaders</td><td>Adventurer Guild</td><td>Friendly Rivals</td><td>Flashy, loud, occasionally aflame.</td></tr>
+        <tr><td>Dismal Blades</td><td>Criminal</td><td>Neutral → Hostile</td><td>Will stab you — might pay first.</td></tr>
+        <tr><td>Ivory Labyrinth Templars</td><td>Cult</td><td>Hostile</td><td>Summon things with too many eyes.</td></tr>
+        <tr><td>Demonic Forces</td><td>Enemies</td><td>Kill on Sight</td><td>The reason we can’t have nice things.</td></tr>
+      </tbody>
+    </table>
   </div>
 
+  <!-- ========= Mission Structure ========================================= -->
+  <section class="section">
+    <h2>🏛️ Modular Mission Structure</h2>
+    <p>Session hooks come from:</p>
+    <ul>
+      <li>📜 External contracts (towns, nobles, trade routes)</li>
+      <li>🛡️ Internal guild needs (demon incursions, training drills)</li>
+      <li>🕵️ Faction intrigue (covert tasks, diplomacy)</li>
+    </ul>
+    <p class="note">Choose missions to fit the group’s time and mood.</p>
+  </section>
+</main>
 </body>
 </html>
