--- a/Mission Reports.html
+++ b/Mission Reports.html
@@ -1,113 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Iron Meridian - Mission Reports</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #1c1c1c;
-      color: #f5f5f5;
-      margin: 0;
-      padding: 20px;
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<title>Iron Meridian – Mission Reports</title>
+
+<style>
+  :root{
+    --bg-dark:#1c1c1c;
+    --bg-card:#2a2a2a;
+    --text:#f5f5f5;
+    --accent:#ffc107;
+    --accent-light:#ffd966;
+    --radius:8px;
+  }
+
+  /* ---------- base ---------- */
+  *{box-sizing:border-box;margin:0;padding:0;}
+  body{
+    font-family:"Segoe UI",Tahoma,Verdana,sans-serif;
+    background:var(--bg-dark);color:var(--text);
+    padding:16px;                 /* mobile default */
+  }
+
+  /* ========== NAVIGATION (shared) ========== */
+  .site-header{
+    display:flex;align-items:center;gap:.75rem;
+    background:#1f1f1f;border-bottom:2px solid #444;
+    margin:-16px -16px 1.5rem;
+    padding:.75rem 1rem;position:relative;
+  }
+  .logo{font-weight:700;color:var(--accent);font-size:1.1rem;white-space:nowrap;}
+
+  .nav-toggle{display:none;}            /* hidden checkbox */
+  .hamburger{
+    font-size:1.4rem;color:#fff;cursor:pointer;
+    margin-left:auto;user-select:none;display:block;
+  }
+  .site-nav{
+    display:none;flex-direction:column;gap:.75rem;
+    position:absolute;left:0;right:0;top:100%;
+    background:#1f1f1f;border-top:2px solid #444;
+    padding:1rem;
+  }
+  .site-nav a{color:#fff;text-decoration:none;font-weight:600;white-space:nowrap;}
+  .site-nav a:hover{color:var(--accent);}
+  /* toggle */
+  .nav-toggle:checked + .hamburger + .site-nav{display:flex;}
+
+  /* desktop view */
+  @media(min-width:620px){
+    body{padding:24px;}
+    .site-header{margin:-24px -24px 1.75rem;padding:1rem 1.25rem;}
+    .hamburger{display:none;}
+    .site-nav{
+      display:flex !important;position:static;
+      flex-direction:row;gap:1.25rem;margin-left:auto;
+      background:transparent;border:none;padding:0;
     }
-    h1 {
-      text-align: center;
-      color: #ffc107;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-bottom: 20px;
-    }
-    th, td {
-      padding: 12px;
-      border-bottom: 1px solid #333;
-      text-align: left;
-      vertical-align: top;
-    }
-    th {
-      background-color: #333;
-      color: #ffc107;
-    }
-    tr:nth-child(even) {
-      background-color: #2a2a2a;
-    }
-    details {
-      background-color: #2a2a2a;
-      margin-top: 10px;
-      padding: 10px;
-      border-radius: 6px;
-    }
-    summary {
-      font-weight: bold;
-      cursor: pointer;
-    }
-    /* Style for the report link */
-    .report-link {
-      display: inline-block;
-      margin-top: 10px;
-      padding: 0.5em 1em;
-      background-color: #333;
-      color: #fff;
-      font-weight: bold;
-      text-decoration: none;
-      border: 1px solid #444;
-      border-radius: 6px;
-    }
-    .report-link:hover {
-      background-color: #444;
-    }
-  </style>
+  }
+
+  /* ---------- headings ---------- */
+  h1{
+    text-align:center;color:var(--accent);
+    font-size:clamp(1.5rem,5vw,2.2rem);
+    margin-bottom:.75em;
+  }
+  h2{
+    color:var(--accent-light);
+    font-size:clamp(1.1rem,4vw,1.4rem);
+    margin-bottom:.35em;
+  }
+  p{line-height:1.6;margin-bottom:1em;}
+
+  /* ---------- report cards ---------- */
+  .reports{
+    display:grid;grid-template-columns:1fr;gap:1.25rem;
+  }
+  .report{
+    background:var(--bg-card);
+    border-left:5px solid var(--accent);
+    padding:1.25rem;border-radius:var(--radius);
+    display:flex;flex-direction:column;
+  }
+  .report-link{
+    align-self:flex-start;padding:.55em 1.2em;
+    background:#333;border:1px solid #444;
+    color:#fff;font-weight:bold;text-decoration:none;
+    border-radius:var(--radius);margin-top:auto;transition:background .2s;
+  }
+  .report-link:hover{background:#444;}
+
+  /* grid on larger screens */
+  @media(min-width:620px){
+    .reports{grid-template-columns:repeat(auto-fill,minmax(300px,1fr));}
+  }
+</style>
 </head>
 
 <body>
-<!-- Navigation Bar -->
-<nav style="background-color: #1f1f1f; padding: 1em; border-bottom: 2px solid #444;">
-  <ul style="display: flex; justify-content: center; list-style: none; margin: 0; padding: 0;">
-    <li style="margin: 0 1em;">
-      <a href="Mercenary Guild Overview.html" style="color: #fff; text-decoration: none; font-weight: bold;">🏰 Guild Overview</a>
-    </li>
-    <li style="margin: 0 1em;">
-      <a href="Mission Board.html" style="color: #fff; text-decoration: none; font-weight: bold;">📜 Mission Board</a>
-    </li>
-    <li style="margin: 0 1em;">
-      <a href="The Armoury.html" style="color: #fff; text-decoration: none; font-weight: bold;">🛡️ The Armoury</a>
-    </li>
-    <li style="margin: 0 1em;">
-      <a href="Mission Reports.html" style="color: #fff; text-decoration: none; font-weight: bold;">📝 Mission Reports</a>
-    </li>
-	<li style="margin: 0 1em;">
-      <a href="The Iron Reserve.html" style="color: #fff; text-decoration: none; font-weight: bold;">🛡️ The Iron Reserve</a>
-    </li>
-  </ul>
-</nav>
+<!-- ========== HEADER & NAV ========== -->
+<header class="site-header">
+  <div class="logo">Iron Meridian</div>
+
+  <input type="checkbox" id="nav-toggle" class="nav-toggle">
+  <label for="nav-toggle" class="hamburger">&#9776;</label>
+
+  <nav class="site-nav">
+    <a href="Mercenary Guild Overview.html">🏰 Overview</a>
+    <a href="Mission Board.html">📜 Mission Board</a>
+    <a href="Mission Reports.html">📝 Reports</a>
+    <a href="The Armoury.html">🛡️ The Armoury</a>
+    <a href="iron-meridian-downtime.html">⏳ Downtime</a>
+    <a href="The Iron Reserve.html">🏺 Reserve</a>
+  </nav>
+</header>
 
 <h1>🛡️ Iron Meridian Mission Reports 📜</h1>
 
-<!-- Mission Reports List -->
-<div class="mission-report">
-  <h2>There's Goblins in My Turnips!</h2>
-  <p>A daring team of mercenaries tackles a goblin infestation... and sets a few turnips (and goblins) on fire in the process. Includes surprise pies, thrown Leshy, and a goblin king blinded mid-speech.</p>
-  <a href="mission-reports/Theres-Goblins-in-My-Turnips-Report.html" class="report-link">📜 Read Full Report</a>
-</div>
+<!-- reports grid -->
+<div class="reports">
 
-<div class="mission-report">
-  <h2>The Affliction of the Redwater</h2>
-  <p>A corrupted river, suspicious stones, and a sorrowful siren. The team braved crimson slimes, musical mind control, and a slightly overenthusiastic scroll-reader to cleanse Redwater Lake. Features mysterious rituals, dangerous goo, and a scenic lake battle with extra squelch.</p>
-  <a href="mission-reports/The-Affliction-of-the-Redwater-Report.html" class="report-link" style="color: white;">📜 Read Full Report</a>
-</div>
-<div class="mission-report">
-  <h2>Emberdeep Catacombs</h2>
-  <p>A quake reveals a forgotten crypt beneath a dwarven tavern. The party descended into alchemical horrors, restless spirits, and whispering halls. Highlights include rat diplomacy gone wrong, skeletal pranks, constellation puzzles, and a soul-transfer ritual involving a bat familiar and a shattered locket. Echo Gem status: defiled.</p>
-  <a href="mission-reports/Emberdeep-Catacombs-Report.html" class="report-link" style="color: white;">📜 Read Full Report</a>
-</div>
+  <article class="report">
+    <h2>There's Goblins in My Turnips!</h2>
+    <p>A daring team tackles a goblin infestation… and sets a few turnips (and goblins) on fire in the process. Includes surprise pies, thrown leshy, and a goblin king blinded mid-speech.</p>
+    <a href="mission-reports/Theres-Goblins-in-My-Turnips-Report.html" class="report-link">📜 Read Full Report</a>
+  </article>
 
-<!-- Future Mission Reports Placeholder -->
-<div class="mission-report">
-  <h2>New Reports Coming Soon...</h2>
-  <p>More heroics (and shenanigans) will be recorded here as missions are completed!</p>
-</div>
+  <article class="report">
+    <h2>The Affliction of the Redwater</h2>
+    <p>A corrupted river, suspicious stones, and a sorrowful siren. The team braved crimson slimes, musical mind-control and an overenthusiastic scroll-reader to cleanse Redwater Lake.</p>
+    <a href="mission-reports/The-Affliction-of-the-Redwater-Report.html" class="report-link">📜 Read Full Report</a>
+  </article>
 
+  <article class="report">
+    <h2>Emberdeep Catacombs</h2>
+    <p>A quake reveals a forgotten crypt beneath a dwarven tavern. Highlights: rat diplomacy gone wrong, constellation puzzles, and a soul-transfer ritual involving a bat familiar.</p>
+    <a href="mission-reports/Emberdeep-Catacombs-Report.html" class="report-link">📜 Read Full Report</a>
+  </article>
+
+  <!-- placeholder -->
+  <article class="report">
+    <h2>New Reports Coming Soon…</h2>
+    <p>More heroics (and shenanigans) will be recorded here as missions are completed!</p>
+  </article>
+
+</div>
 </body>
 </html>
