--- a/iron-meridian-downtime.html
+++ b/iron-meridian-downtime.html
@@ -1,102 +1,190 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Iron Meridian - Downtime Activities</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #1c1c1c;
-      color: #f5f5f5;
-      margin: 0;
-      padding: 20px;
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Iron Meridian – Downtime Activities</title>
+
+<style>
+  :root{
+    --bg-dark:#1c1c1c;
+    --bg-card:#2a2a2a;
+    --text:#f5f5f5;
+    --accent:#ffc107;
+    --accent-light:#ffd966;
+    --radius:8px;
+  }
+
+  /* ---------- base ---------- */
+  *{box-sizing:border-box;margin:0;padding:0;}
+  body{
+    font-family:"Segoe UI",Tahoma,Verdana,sans-serif;
+    background:var(--bg-dark);color:var(--text);
+    padding:16px 16px 32px;           /* bottom extra for mobile nav drop */
+  }
+
+  /* ==========  NAVIGATION  ============================================= */
+  .site-header{
+    display:flex;align-items:center;gap:.75rem;
+    background:#1f1f1f;border-bottom:2px solid #444;
+    margin:-16px -16px 1.5rem;
+    padding:.75rem 1rem;position:relative;
+  }
+  .logo{
+    font-weight:700;color:var(--accent);
+    font-size:1.1rem;white-space:nowrap;
+  }
+  /* hamburger (hidden on wide screens) */
+  .hamburger{
+    font-size:1.4rem;color:#fff;cursor:pointer;
+    margin-left:auto;user-select:none;
+    display:block;
+  }
+  .nav-toggle{display:none;}          /* hidden checkbox */
+  /* nav links */
+  .site-nav{
+    display:none;                     /* mobile default */
+    flex-direction:column;gap:.75rem;
+    position:absolute;left:0;right:0;top:100%;
+    background:#1f1f1f;border-top:2px solid #444;
+    padding:1rem;
+  }
+  .site-nav a{
+    color:#fff;text-decoration:none;font-weight:600;
+    white-space:nowrap;
+  }
+  .site-nav a:hover{color:var(--accent);}
+
+  /* show menu when checkbox checked */
+  .nav-toggle:checked + .hamburger + .site-nav{display:flex;}
+
+  /* ---------- larger screens ---------- */
+  @media(min-width:620px){
+    body{padding:24px;}
+    .site-header{margin:-24px -24px 2rem;padding:1rem 1.25rem;}
+    .hamburger{display:none;}                         /* hide icon */
+    .site-nav{
+      display:flex !important;position:static;
+      flex-direction:row;gap:1.25rem;
+      background:transparent;border:none;margin-left:auto;
     }
-    h1 {
-      text-align: center;
-      color: #ffc107;
-    }
-    h2 {
-      color: #ffd966;
-      margin-top: 1.5em;
-    }
-    p, ul {
-      margin-left: 1em;
-      line-height: 1.6;
-    }
-    .activity {
-      background-color: #2a2a2a;
-      border-left: 5px solid #ffc107;
-      padding: 1em;
-      margin-bottom: 1em;
-      border-radius: 8px;
-    }
-  </style>
+  }
+
+  /* ---------- page heading ---------- */
+  h1{
+    text-align:center;color:var(--accent);
+    font-size:clamp(1.4rem,5vw,2rem);
+    margin-bottom:.5em;
+  }
+  h2{
+    color:var(--accent-light);
+    font-size:clamp(1.1rem,4vw,1.4rem);
+    margin-bottom:.25em;
+  }
+
+  p{line-height:1.6;margin-bottom:1em;text-align:center;}
+  ul{line-height:1.6;padding-left:1.2em;margin-bottom:0;}
+
+  /* ---------- activity cards ---------- */
+  .activities{
+    display:grid;grid-template-columns:1fr;gap:1rem;
+  }
+  .activity{
+    background:var(--bg-card);
+    border-left:5px solid var(--accent);
+    padding:1em;border-radius:var(--radius);
+  }
+
+  @media(min-width:600px){
+    .activities{grid-template-columns:repeat(auto-fill,minmax(280px,1fr));}
+  }
+</style>
 </head>
+
 <body>
+  <!-- ========== HEADER & NAV ========== -->
+  <header class="site-header">
+    <div class="logo">Iron Meridian</div>
+
+    <!-- nav toggle (hamburger uses label) -->
+    <input type="checkbox" id="nav-toggle" class="nav-toggle">
+    <label for="nav-toggle" class="hamburger">&#9776;</label>
+
+    <nav class="site-nav">
+      <a href="Mercenary Guild Overview.html">🏰 Overview</a>
+      <a href="Mission Board.html">📜 Mission Board</a>
+      <a href="Mission Reports.html">📝 Reports</a>
+      <a href="The Armoury.html">🛡️ The Armoury</a>
+      <a href="iron-meridian-downtime.html">⏳ Downtime</a>
+      <a href="The Iron Reserve.html">🏺 Reserve</a>
+    </nav>
+  </header>
+
+  <!-- ========== PAGE CONTENT ========== -->
   <h1>📘 Iron Meridian – Downtime Activity Guide</h1>
-  <p style="text-align:center;"><em>Choose what your character does between missions!</em></p>
+  <p><em>Choose what your character does between missions!</em></p>
 
-  <div class="activity">
-    <h2>🎓 Train a Skill / Feat</h2>
-    <ul>
-      <li><strong>Use:</strong> 1 week per skill rank or feat</li>
-      <li><strong>Benefit:</strong> Improve a skill, learn a new language or Lore</li>
-      <li><strong>Requires:</strong> Access to a trainer and gold (ask the DM)</li>
-    </ul>
+  <div class="activities">
+    <div class="activity">
+      <h2>🎓 Train a Skill / Feat</h2>
+      <ul>
+        <li><strong>Use:</strong> 1 week per skill rank or feat</li>
+        <li><strong>Benefit:</strong> Improve a skill, learn a new language or Lore</li>
+        <li><strong>Requires:</strong> Access to a trainer and gold (ask the DM)</li>
+      </ul>
+    </div>
+
+    <div class="activity">
+      <h2>🪙 Earn Income</h2>
+      <ul>
+        <li><strong>Use:</strong> Roll a relevant skill (Crafting, Performance, Lore, etc.)</li>
+        <li><strong>Benefit:</strong> Gain gold based on roll and level</li>
+      </ul>
+    </div>
+
+    <div class="activity">
+      <h2>🔧 Crafting</h2>
+      <ul>
+        <li><strong>Use:</strong> Crafting check vs. item DC (4 day minimum)</li>
+        <li><strong>Benefit:</strong> Make gear cheaper than buying it</li>
+        <li><strong>Requires:</strong> Crafting skill, materials, tools, recipe</li>
+      </ul>
+    </div>
+
+    <div class="activity">
+      <h2>📖 Research</h2>
+      <ul>
+        <li><strong>Use:</strong> Arcana, Occultism, Religion, Society, or Lore</li>
+        <li><strong>Benefit:</strong> Learn info, hints, or side quest leads</li>
+      </ul>
+    </div>
+
+    <div class="activity">
+      <h2>🛍️ Trade / Haggle</h2>
+      <ul>
+        <li><strong>Use:</strong> Diplomacy, Deception, or Intimidation</li>
+        <li><strong>Benefit:</strong> Trade gear, get discounts, unlock secret stock</li>
+      </ul>
+    </div>
+
+    <div class="activity">
+      <h2>🤫 Sneaky Stuff</h2>
+      <ul>
+        <li><strong>Use:</strong> Stealth, Thievery, Deception, Society, etc.</li>
+        <li><strong>Benefit:</strong> Gain favours, info, or “alternative solutions”</li>
+        <li><strong>Note:</strong> Might lead to new complications</li>
+      </ul>
+    </div>
+
+    <div class="activity">
+      <h2>❤️ Personal Projects / Role-play</h2>
+      <ul>
+        <li><strong>Use:</strong> Any skill or story-based idea</li>
+        <li><strong>Benefit:</strong> Progress goals, unlock new plot, earn rep or gifts</li>
+      </ul>
+    </div>
   </div>
 
-  <div class="activity">
-    <h2>🪙 Earn Income</h2>
-    <ul>
-      <li><strong>Use:</strong> Roll a relevant skill (Crafting, Performance, Lore, etc.)</li>
-      <li><strong>Benefit:</strong> Gain gold based on roll and level</li>
-    </ul>
-  </div>
-
-  <div class="activity">
-    <h2>🔧 Crafting</h2>
-    <ul>
-      <li><strong>Use:</strong> Crafting check vs. item DC (4 day minimum)</li>
-      <li><strong>Benefit:</strong> Make gear cheaper than buying it</li>
-      <li><strong>Requires:</strong> Crafting skill, materials, tools, recipe</li>
-    </ul>
-  </div>
-
-  <div class="activity">
-    <h2>📖 Research</h2>
-    <ul>
-      <li><strong>Use:</strong> Arcana, Occultism, Religion, Society, or Lore</li>
-      <li><strong>Benefit:</strong> Learn info, hints, or side quest leads</li>
-    </ul>
-  </div>
-
-  <div class="activity">
-    <h2>🛍️ Trade / Haggle</h2>
-    <ul>
-      <li><strong>Use:</strong> Diplomacy, Deception, or Intimidation</li>
-      <li><strong>Benefit:</strong> Trade gear, get discounts, unlock secret stock</li>
-    </ul>
-  </div>
-
-  <div class="activity">
-    <h2>🤫 Sneaky Stuff</h2>
-    <ul>
-      <li><strong>Use:</strong> Stealth, Thievery, Deception, Society, etc.</li>
-      <li><strong>Benefit:</strong> Gain favors, info, or “alternative solutions”</li>
-      <li><strong>Note:</strong> Might lead to new complications</li>
-    </ul>
-  </div>
-
-  <div class="activity">
-    <h2>❤️ Personal Projects / Roleplay</h2>
-    <ul>
-      <li><strong>Use:</strong> Any skill or story-based idea</li>
-      <li><strong>Benefit:</strong> Progress goals, unlock new plot, earn rep or gifts</li>
-    </ul>
-  </div>
-
-  <p style="text-align:center; margin-top:2em;">Need help? Just ask the GM — we'll figure it out together!</p>
+  <p style="margin-top:2em;"><em>Need help? Just ask the GM — we'll figure it out together!</em></p>
 </body>
 </html>
